<resources>
    <string name="app_name">Taxi Valldigna</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="callTaxi">Call Taxi</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now">Now</string>
    <string name="reserve">Reserve</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="phone">number phone</string>
    <string name="contact">contact name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="SingIn">Sign In</string>
    <string name="choose_city_from">Choose city from, please</string>
    <string name="choose_city_to">Choose city to, please</string>
    <string name="title_activity_go">GoActivity</string>
    <string name="from">from</string>
    <string name="place_name">place</string>
    <string name="sit_map">sit map</string>
    <string name="to">to</string>
    <string name="coments">coments</string>
    <string name="n_pass">pass.</string>
    <string name="date">date</string>
    <string name="in">in</string>
    <string name="minutes">minutes</string>
    <string name="save_ok">save successfully</string>
    <string name="save_no">no save, review the data and try again</string>
    <string name="hour">hour</string>
    <string name="city">city</string>
    <string name="questionTrip">Choose your trip</string>
    <string name="oneway">ONE WAY</string>
    <string name="roundtrip">ROUND TRIP</string>
    <string name="next">next</string>
    <string name="done">done</string>
    <string name="title_activity_maps">Map</string>
    <string name="want_save">Do you want save this address?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="LogIn">Log in</string>
    <string name="pass_no">your mail or password is not correct</string>
    <string name="title_activity_back">BackActivity</string>
    <string name="dir_from">direction from</string>
    <string name="dir_to">direction to</string>
    <string name="save_one">Only save one trip</string>
    <string name="trip_go">(outward)</string>
    <string name="trip_back">(return)</string>
    <string name="error">ERROR!</string>
    <string name="hour_l">hour:</string>
    <string name="date_l">date:</string>
    <string name="title_activity_trips">TripsActivity</string>
    <string name="price_l">price</string>
    <string name="kms">kms</string>
    <string name="insert_time">Insert the pick up (clock)</string>
    <string name="insert_date">Insert the pick up (date)</string>
    <string name="insert_min">Insert the pick up (minutes)</string>
    <string name="check_from">your address pick up not is valid</string>
    <string name="action_trips_list">Trips list</string>
    <string name="go_sign_in">Go to sign in</string>
    <string name="go_log_in">Go to log in</string>
    <string name="mail_no">Your email not is valid</string>
    <string name="search">search</string>
    <string name="to_land">to  </string>
</resources>
